--- a/title.html
+++ b/title.html
@@ -2,6 +2,7 @@
 <head>
     <title>/a/ manga thing</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/title.css">
 </head>
 <body>
