added text/css types

--- a/catalog.html
+++ b/catalog.html
@@ -2,8 +2,8 @@
 <head>
     <title>/a/ manga thing</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/catalog.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/catalog.css">
 </head>
 <body>
     <div id="header">
