--- a/reader.html
+++ b/reader.html
@@ -5,6 +5,7 @@
 
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"/>
 
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css"></link>
         <link rel="stylesheet" type="text/css" href="css/reader.css"></link>
     </head>
     <body>
