added label to catalog

--- a/catalog.html
+++ b/catalog.html
@@ -10,6 +10,7 @@
         <input id="search" type="text" placeholder="Search">
         <img id="logo" src="img/logo.png"/>
     </div>
+    <h2 id="label">Recently Updated</h2>
     <div id="titles">
     </div>
     <script type="text/javascript" src="js/catalog.js"></script>
